[package]

name          = "mio"
# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create git tag
version       = "0.6.16"
license       = "MIT"
authors       = ["Carl Lerche <me@carllerche.com>"]
description   = "Lightweight non-blocking IO"
documentation = "https://docs.rs/mio/0.6.16/mio/"
homepage      = "https://github.com/carllerche/mio"
repository    = "https://github.com/carllerche/mio"
readme        = "README.md"
keywords      = ["io", "async", "non-blocking"]
categories    = ["asynchronous"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
]

[features]
with-deprecated = []
default = ["with-deprecated"]

[dependencies]
lazycell = "1"
log      = "0.4"
slab     = "0.4.0"
net2     = {path = "../net2-rs"}
iovec    = {path = "../iovec-backport"}
socket2 = {path = "../socket2-rs"}

[target.'cfg(target_os = "fuchsia")'.dependencies]
fuchsia-zircon = "0.3.2"
fuchsia-zircon-sys = "0.3.2"

[target.'cfg(unix)'.dependencies]
libc   = "0.2.42"

[target.'cfg(windows)'.dependencies]
winapi = {path = "../winapi-rs"}
miow   = {path = "../miow"}


[dev-dependencies]
env_logger = { version = "0.4.0", default-features = false }
tempdir    = "0.3.4"
bytes      = {path = "../bytes"}

[[test]]
name = "test"
path = "test/mod.rs"
